--- a/chats.html
+++ b/chats.html
@@ -40,7 +40,7 @@
         <a href="chat.html">
         <div class="user-component-1">
             <div class="user-component__column">
-                <img src="file:///Users/parkhoyeon/Pictures/Photos%20Library.photoslibrary/resources/derivatives/3/3D22326E-BDC2-4744-92E1-DCC6A29F6D34_1_105_c.jpeg"
+                <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTAxMDVfMTgg%2FMDAxNjA5ODI4NTc0Mjcx.gNjPJNDeTDH8UzgH-FP4UYZ1qwwUXbrMWRqK7TRENSEg.T3gs_StGTSvKHuPsg65OFm4SDNq_-ppEodgbaCFYUPgg.PNG.godankhj1013%2F6.png&type=a340"
                     class="user-component__avatar user-component__avatar" />
                 <div class="user-component__text">
                     <h4 class="user-component__title">공주<i class="fas fa-heart"></i></h4>
