--- a/friends.html
+++ b/friends.html
@@ -41,7 +41,7 @@
         <main class="friends-screen">
 <div class="user-component">
     <div class="user-component__column">
-    <img src="file:///Users/parkhoyeon/Downloads/%E1%84%8B%E1%85%A7%E1%84%92%E1%85%A2%E1%86%BC%E1%84%89%E1%85%A1%E1%84%8C%E1%85%B5%E1%86%AB.jpeg"
+    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxODAyMDJfOTAg%2FMDAxNTE3NTAyODA4ODI0.cxuAkiwL2Dw5FUxUYWTwA2GUwlqpLzgRwjHirNDC6Cog.fTa3ixKaDFaD7DM6ctC0BodxnM_1DTdUsp3IzmOwsJkg.PNG.marketstory24%2F%25C4%25AB%25C4%25AB%25BF%25C0%25C5%25E5_%25B7%25CE%25B0%25ED_3.png&type=a340"
         class="user-component__avatar user-component__avatar--xl" />
     <div class="user-component__text">
         <h4 class="user-component__title">박호연</h4>
@@ -56,7 +56,7 @@
 </div>
 <div class="user-component">
     <div class="user-component__column">
-    <img src="file:///Users/parkhoyeon/Pictures/Photos%20Library.photoslibrary/resources/derivatives/3/3D22326E-BDC2-4744-92E1-DCC6A29F6D34_1_105_c.jpeg"
+    <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMTAxMDVfMTgg%2FMDAxNjA5ODI4NTc0Mjcx.gNjPJNDeTDH8UzgH-FP4UYZ1qwwUXbrMWRqK7TRENSEg.T3gs_StGTSvKHuPsg65OFm4SDNq_-ppEodgbaCFYUPgg.PNG.godankhj1013%2F6.png&type=a340"
         class="user-component__avatar user-component__avatar--sm" />
     <div class="user-component__text">
         <h4 class="user-component__title user-component__title--not-bold">공주❤️</h4>
